src/test/deca/syntax/invalid/decaObjet/include/circular2.decah
#include "circular1.decah"
